# docs/swagger.json
@@ -27,7 +27,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/internal_product.Product"
+                                "$ref": "#/definitions/product.ProductResponse"
                             }
                         }
                     },
@@ -45,7 +45,7 @@
         }
     },
     "definitions": {
-        "internal_product.Product": {
+        "product.ProductResponse": {
             "type": "object",
             "properties": {
                 "description": {
@@ -54,15 +54,14 @@
                 "id": {
                     "type": "string"
                 },
-                "imageURL": {
+                "image_url": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
                 "price": {
-                    "type": "integer",
-                    "format": "int64"
+                    "type": "integer"
                 },
                 "stock": {
                     "type": "integer"
