# internal/product/model.go
@@ -1,11 +1,11 @@
 package product
 
 // Product response model
-type Product struct {
-	ID          string
-	Name        string
-	Description string
-	Price       int64
-	Stock       int
-	ImageURL    string
+type ProductResponse struct {
+	ID          string `json:"id"`
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	Price       int64  `json:"price"`
+	Stock       int    `json:"stock"`
+	ImageURL    string `json:"image_url"`
 }
